--- a/style.css
+++ b/style.css
@@ -61,11 +61,6 @@
   }
   
   /* Gradient Decoration */
-  .gradient {
-    width: 8px;
-    background: linear-gradient(0deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
-    height: 100%; /* Match the height of the content */
-  }
 
   .gradient-text {
     background-image: linear-gradient(45deg, #C850C0 16%, #FFCC70 100%);
@@ -200,13 +195,13 @@
     flex-wrap: nowrap;
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: -ms-autohiding-scrollbar;
-    transition: all .3s ease-in-out;
+    transition: all .5s ease-in-out;
+    align-items: stretch;
   }
 
   .carousel-list-item {
     flex: 0 0 auto;
     width: 300px;
-    height: 100%;
     position: relative;
     padding: 20px;
     margin: 0 10px;
