--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,8 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: "Space Grotesk", sans-serif;
-  background-color: #000;
+  background: #000000;
+  background: radial-gradient(circle, rgba(0, 0, 0, 1) 0%, rgba(10, 10, 10, 1) 100%);
   color: f3f4f6;
 }
 
