--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,8 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: "Space Grotesk", sans-serif;
-  background: #000000;
-  background: radial-gradient(circle, rgba(0, 0, 0, 1) 0%, rgba(10, 10, 10, 1) 100%);
-  color: f3f4f6;
+  background: #000;
+  color: #f3f4f6;
 }
 
 @layer utilities {
